--- a/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distribuidor/crearDistribuidor.xhtml
@@ -20,7 +20,7 @@
                                              label="#{msg.m_distri_nombre}" style="width: 90%"/>
 
                                 <h:outputLabel value="#{msg.admin}" style="width: 30%"/>
-                                <p:inputText id="itNombreAdmin" required="true" value="#{distributorCreate.nameAdmin}"
+                                <p:inputText id="itNombreAdmin" required="false" value="#{distributorCreate.nameAdmin}"
                                              label="#{msg.admin}" style="width: 90%"/>
 
                                 <h:outputLabel value="#{msg.regional}" style="width: 30%"/>
