--- a/DiageoMDMWeb/src/main/webapp/admin/distribuidor/consultarDistribuidor.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distribuidor/consultarDistribuidor.xhtml
@@ -34,7 +34,7 @@
                                                  label="#{msg.m_distri_nombre}" style="width: 90%"/>
 
                                     <h:outputLabel value="#{msg.admin}" style="width: 30%"/>
-                                    <p:inputText id="itNombreAdmin" required="true" value="#{distributorSearch.nameAdmin}"
+                                    <p:inputText id="itNombreAdmin" required="false" value="#{distributorSearch.nameAdmin}"
                                                  label="#{msg.admin}" style="width: 90%"/>
 
                                     <h:outputLabel value="#{msg.regional}" style="width: 30%"/>
