--- a/DiageoMDMWeb/src/main/webapp/perfil/datos/datosUsuario.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/perfil/datos/datosUsuario.xhtml
@@ -9,42 +9,39 @@
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
             <ui:define name="content">
                 <h:form id="formMisDatos">
-                    <p:panelGrid columns="2" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                    <p:fieldset legend="#{msg.fs_account}" style="width: 90%">
+                        <h:panelGrid columns="4" style="width: 90%">
 
-                        <h:outputLabel value="#{msg.usu_tipo_doc}" style="width: 20%"/>
-                        <h:outputLabel value="#{myDataBean.tipoDocumento}" style="width: 75%"/>                            
-
-
-                        <h:outputLabel value="#{msg.usu_num_doc}" style="width: 20%"/>
-                        <h:outputLabel value="#{myDataBean.numDocumento}" style="width: 75%"/>
+                            <h:outputLabel value="#{msg.usu_tipo_doc}" style="width: 20%"/>
+                            <h:outputLabel value="#{myDataBean.tipoDocumento}" style="width: 75%"/>                            
 
 
-                        <h:outputLabel value="#{msg.usu_correo}" style="width: 25%"/>
-                        <h:outputLabel value="#{myDataBean.correo}" style="width: 75%"/>
-                        
-                        <h:outputLabel value="#{msg.usu_perfil}" style="width: 25%"/>
-                        <h:outputLabel value="#{myDataBean.perfil}" style="width: 75%"/>
+                            <h:outputLabel value="#{msg.usu_num_doc}" style="width: 20%"/>
+                            <h:outputLabel value="#{myDataBean.numDocumento}" style="width: 75%"/>
 
-                        <h:outputLabel value="#{msg.usu_nombres}" style="width: 25%"/>
-                        <h:panelGroup>
-                            <p:inputText id="itName" value="#{myDataBean.nombres}" label="#{msg.usu_nombres   }" style="width: 75%" required="true"/>
-                            <p:message for="itName"/>
-                        </h:panelGroup>
 
-                        <h:outputLabel value="#{msg.usu_apellidos}" style="width: 25%"/>
-                        <h:panelGroup>
-                            <p:inputText id="itLastName" value="#{myDataBean.apellidos}" label="#{msg.usu_apellidos}" style="width: 75%" required="true"/>                                 
-                            <p:message for="itLastName"/>
-                        </h:panelGroup>
+                            <h:outputLabel value="#{msg.usu_correo}" style="width: 25%"/>
+                            <h:outputLabel value="#{myDataBean.correo}" style="width: 75%"/>
 
+                            <h:outputLabel value="#{msg.usu_perfil}" style="width: 25%"/>
+                            <h:outputLabel value="#{myDataBean.perfil}" style="width: 75%"/>
+
+                            <h:outputLabel value="#{msg.usu_nombres}" style="width: 25%"/>
+                            <h:panelGroup>
+                                <p:inputText id="itName" value="#{myDataBean.nombres}" label="#{msg.usu_nombres}" style="width: 75%" required="true"/>
+                                <p:message for="itName"/>
+                            </h:panelGroup>
+
+                            <h:outputLabel value="#{msg.usu_apellidos}" style="width: 25%"/>
+                            <h:panelGroup>
+                                <p:inputText id="itLastName" value="#{myDataBean.apellidos}" label="#{msg.usu_apellidos}" style="width: 75%" required="true"/>                                 
+                                <p:message for="itLastName"/>
+                            </h:panelGroup>                            
+                        </h:panelGrid>
+                        <br/><br/>
                         <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{myDataBean.modificarDatos()}"
-                                         style="width: 60%;color: white;background: -webkit-linear-gradient(#0088cc, #149bdf);text-align: center"/>
-                        <p:messages id="mCamPas" closable="true" showDetail="true" showSummary="false" globalOnly="true"
-                                   />
-                    </p:panelGrid>
-
-                    <br/>
-
+                                         styleClass="button"/>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
         </ui:composition>
