--- a/DiageoMDMWeb/src/main/webapp/reports/distributorReport.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/reports/distributorReport.xhtml
@@ -1,14 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
 
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-                content
+                
             </ui:define>
 
         </ui:composition>
